# BitMark

./: .gitignore  LICENSE  README.md  architecture_wrapper.py  comprehensive_infer.py  datasets.py  detect_watermark.py  download_models.py  extended_watermark_processor.py  helper.py  img_quality_eval.py  pyproject.toml  robustness_test.py  watermark_attacks.py  watermark_setup.py
BiGR/: README.md  data.py  environment.yml  run_BiGR.ipynb  sample.py  train_ddp.py
BiGR/apps/: enrich.py  inpaint.py  interpolate.py
BiGR/bae/: binaryae.py  binarylatent.py  lpips.py  transformer.py
BiGR/gradio/: README.md  demo_mask.py
BiGR/hparams/: __init__.py  set_up_hparams.py
BiGR/llama/: gpt.py  load_bigr.py
BiGR/rope/: rope_embed.py
BiGR/script/: app_edit.sh  app_enrich.sh  app_inpaint.sh  app_interpolate.sh  app_outpaint.sh  sample.sh  sample_512.sh  train.sh
BiGR/utils/: log_utils.py  sampler_utils.py  vqgan_utils.py
Infinity/: environment.yml  flipper.py  requirements.txt  train.py  trainer.py
Infinity/tools/: run_infinity.py  scales_injector.py
Instella-T2I/: LICENSE  NOTICES  README.md  infer_ar.ipynb  requirements.txt  test_ar.py  test_diff.py
Instella-T2I/accelerate_configs/: deepspeed_zero2_config.yaml  deepspeed_zero2_config_test.yaml  (+3 more)
inference/: infer_infinity.ipynb  watermark_comprehensive_inference.sh  watermark_fid.sh  watermark_robustness.sh
rotate_back/: README.md  config.py  generator.py  infer.py  processing.py  requirements.txt
wm_sand_vision/: README.md  cv_attack.py  data.py  evaluate_flops.py  job.sh  run_attack.sh
(+29 files in other folders)
